<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".Placebook">
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_menu_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_new_place"
          android:icon="@drawable/ic_menu_add"
          android:title="@string/action_new_place"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_view_all"
          android:icon="@drawable/ic_menu_sort_by_size"
          android:title="@string/action_view_all"
          android:showAsAction="ifRoom" />
    <!--<item android:id="@+id/action_edit_place"
          android:icon="@drawable/ic_menu_edit"
          android:title="@string/action_edit_place"
          android:showAsAction="ifRoom" />-->
    <item android:id="@+id/action_delete_place"
          android:icon="@drawable/ic_menu_delete"
          android:title="@string/action_delete_place"
          android:showAsAction="ifRoom" />
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:icon="@drawable/ic_menu_settings_holo_light"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          android:showAsAction="never"/>
</menu>
